tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__HeatSeekingVissi-AAAAAAAAAAAAAAAAAAAFcw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1395,
  "prerequisites": [
    227
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Vis Shard can be used to cast a homing projectile which deals 35 damage. This projectile can bounce off of solid blocks. If the target is not hit in 10 seconds, the projectile disappears.\n\n[note]This focus accepts the following upgrades in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level\n§5Potency§r: Increases damage dealt every level\n§5Persistent§r (level 5): The shard will seek another target if its current one dies or gets out of range",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Heat-Seeking Vis-sile",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    227
  ],
  "rewards": [],
  "tasks": []
}
