tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__ItCantBendSpoons-AAAAAAAAAAAAAAAAAAAFbg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1390,
  "prerequisites": [
    1387,
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Telekinesis is a wand focus that can move nearby dropped items. It either moves them where you are pointing with the wand or toward you while sneaking.\n\n[note]This focus accepts the following upgrade in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "It Can't Bend Spoons",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1387,
    238
  ],
  "rewards": [],
  "tasks": []
}
