tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__MagicalBaseDefen-AAAAAAAAAAAAAAAAAAAFYQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1377,
  "prerequisites": [
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Warding can be used to make blocks invincible with right-click. Warding may be removed by right-clicking it again. It is not able to ward transparent blocks like Glass or non-full blocks like slabs, but there is a block known as Warded Glass available with the Warded Arcana research if you want a protected transparent block. It is also unable to ward blocks with Tile Entities like chests. Take note that only the player who warded the block can unward it.\n\nHolding a wand with this focus will show an outline on nearby blocks you have warded. They look normal otherwise. Warded Blocks are [note]completely indestructible[/note] and will produce particle effects similar to runic shielding when a player tries to break them. Blocks will lose any special properties when warded: sand or gravel will not fall, grass will not grow, and packed ice will no longer be slippery. Warded blocks cannot be affected by any outside influence such as redstone or pistons. The only way to break the warded block is via the owner right-clicking with a wand with this focus.\n\n[note]Special Note: Warded blocks emit light. They can also cause quite a bit of lag if used at scale.[/note]\n\n[note]This focus accepts the following upgrades in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level\n§\n§5Architect§r (level 2): Allows the focus's working area to be modified with the Misc Wand Toggle keybind. Sneaking with the keybind changes which axes are modified. This upgrade increases the maximum area to 7x7x7\n§5Enlarge§r (Requires §5Architect§r)§r: Expands the maximum range by 1 block in each direction per level",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Magical Base Defense",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    238
  ],
  "rewards": [],
  "tasks": []
}
