tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__PlagueInc-AAAAAAAAAAAAAAAAAAAFZA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1380,
  "prerequisites": [
    230
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Pech's Curse is a rare wand focus which cannot be crafted by players. It can only be obtained from a Pech Mage -- either by bartering valuable items or by killing it for its wand to drop. Pech Mages are rare and the drop chance is quite low, so bartering is recommended. [warn]If attacked, the Pech will use this focus against you![/warn]\n\nThis focus fires a small ball of energy with a bright bluish-green trail. This missile is affected by gravity, so the shots need to be \"arced\" to hit distant targets. When the shot hits a mob, it does one heart of damage and randomly inflicts one of several effects on the target: Poison, Weakness, or Slowness.\n\n[note]This focus accepts the following upgrades in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level\n§5Potency§r: Increases potency of the applied effect. Being able to apply Weakness III to mobs might be useful for Blood Magic...\n§5Extend§r (even levels): Extends the duration of the applied effect\n§5Nightshade§r (level 5): Applies all three effects at once",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Plague Inc.",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    230
  ],
  "rewards": [],
  "tasks": []
}
