tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__PressandHoldtheB-AAAAAAAAAAAAAAAAAAAFTw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1359,
  "prerequisites": [
    86,
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Shield creates a shield around you which blocks any incoming damage and removes potion effects. Sneak away if you're fighting an enemy too strong for you!\n\n[note]This focus accepts the following upgrade in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Press and Hold the B Button to Block!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    86,
    238
  ],
  "rewards": [],
  "tasks": []
}
